--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  flutter_bloc: ^0.13.0
+  bloc: ^0.14.0
+  flutter_bloc: ^0.20.0
   http: ^0.12.0+2
 
 dev_dependencies:
